# ai-grading-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  ANALYSIS.md  AUDITORIA-COERENCIA.md  CHANGELOG.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PERFORMANCE.md  README.md  RELATORIO-TCC.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_experiment.py  streamlit_app.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
alembic/: env.py
alembic/versions/: 0003_add_triggers.py  0004_seed_grading_criteria.py  0005_add_vector_status_to_attachments.py  0006_add_is_graded_columns.py  0011_add_corrector_detail_columns.py  0012_add_rag_contexts_to_exam_questions.py  008_update_status.py
app/: analytics_ui.py  api_client.py  experiment_store.py  latex_exporter.py  main.py  persistence.py  ui_components.py
apresentação/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  pendencias.tex
apresentação/diagramas/: config_prova.drawio  correcao_prova.drawio  correcao_resposta.drawio  er.drawio
backend/: .env.example  .pre-commit-config.yaml  RAG_Agent.py  README.md  requirements.txt  streamlit_app.py
backend/docker/: .dockerignore  Dockerfile
backend_old/: .env.example  CHANGELOG.md  LANGSMITH_SETUP.md  README.md
backend_old/app/: analytics_ui.py  persistence.py
backend_old/tests/: test_gemini_connection.py  verify_fix.py
data/chromadb/: chroma.sqlite3
docker/: Dockerfile
examples/: analytics_integration.py
frontend/: ADDING_FEATURES.md  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/docker/: Dockerfile
frontend/src/: App.tsx  index.css
init/schemas/: attachments.sql  auth_refresh_tokens.sql  class_students.sql  classes.sql  exam_criteria.sql  exam_questions.sql  exams.sql  (+6 more)
notebook/: experimento_historia.ipynb
notebooks/: experimento_tcc.ipynb
tcc/: .latexmkrc  AUDITORIA-TCC.md  Principal.aux  Principal.bbl  Principal.blg  Principal.brf  Principal.fdb_latexmk  Principal.fls  Principal.ilg  Principal.loc  Principal.lof  Principal.loq  Principal.lot  Principal.tex  Principal.toc  Referencias.bib  abntex2-alf.bst  abntex2.cls  alterações.txt  config_prova.drawio  configuracao.fdb_latexmk  configuracao.fls  configuracao.tex  correcao_resposta.drawio  experiment-results.json  fluxogramas-subprocessos.md  pendencias.tex
tests/: conftest.py  test_analytics.py  test_gemini_connection.py  test_helpers.py  test_logic.py  test_phase2.py  test_prompts.py  test_rag_cache.py  test_schemas.py  test_settings.py  verify_fix.py
(+814 files in other folders)
