[project]
name = "ai-grading-system"
version = "0.2.0"
description = "Autonomous multi-agent system for automated grading of academic essay questions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lucas Lorenzo Savino" },
    { name = "Maycon Mendes" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (streamlit UI patterns)
    "E402",   # module level import not at top (intentional in some files)
    "E722",   # bare except (legacy streamlit error handling)
    "S101",   # assert usage (ok in tests)
    "S311",   # pseudo-random (not crypto, just mock data)
    "T201",   # print usage (ok in streamlit app)
    "B008",   # function call in default arg (pydantic Field)
    "B017",   # blind exception in tests (acceptable for validation)
    "SIM102", # nested if (readability preference)
    "SIM108", # ternary operator (readability preference)
    "SIM117", # nested with (readability preference)
    "UP035",  # deprecated typing imports (compat with older Python)
    "UP042",  # StrEnum suggestion (compat with Python 3.10)
    "UP045",  # X | None syntax (compat with older Python)
    "B023",   # loop variable binding (streamlit async patterns)
    "B904",   # raise from (legacy code)
    "S110",   # try-except-pass (settings fallback pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "E402"]
"app/**" = ["T201", "E402", "E701"]

[tool.ruff.lint.isort]
known-first-party = ["src", "app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/agents/examiner.py",
    "src/agents/arbiter.py",
    "src/infrastructure/llm_client.py",
    "src/infrastructure/loader.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 50
